# ws-file-executor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: constants.rs  defer.rs  main.rs  service.rs  service_tests.rs  tests.rs
static/: index.html
test-stage/scripts/: evil-cmd.sh  register-file.txt  roundtrip1.sh  roundtrip2.sh  roundtrip3.sh
tests/: roundtrip-test.py  tests-selenium.rs
tests/stage/scripts/: roundtrip4.sh
