[package]
name = "ws-file-executor"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
actix-files = "0.6"
actix-multipart = "0.6.0"
actix-web = "4.3"
actix-ws = "0.2.5"
env_logger = "0.10"
log = "0.4"
serde = "1.0.163"
serde_derive = "1.0.163"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["process"] }
uuid = {version = "1.3.3", features = ["v4"]}

[dev-dependencies]
mockall = "0.11.4"
actix-test = "0.1.1"
actix-rt = "2.8.0"
futures = "0.3.28"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[features]
integration-test = []